<resources>

    <string name="app_name">HiG-Assignment-1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_splash">Mobile Assignment 1, 101024</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_text01">Welcome!</string>
    <string name="additional">Additional functionality</string>
    <string name="sendData">Send data</string>
    <string name="retrieveData">Retrieve data</string>
    <string name="imageHIG">Image from HIG website</string>
    <string name="dataAccess">Data access and retrieval</string>
    <string name="myLoc">My location (launches Maps)</string>
    <string name="sDataHeaderText">Sending Data</string>
    <string name="sDataMainText">Type something to send to logging.php:</string>
    <string name="sDataUserHintMessage">Username</string>
    <string name="sDataTextHintMessage">Message</string>
    <string name="sendButton">Send</string>
    <string name="infoDialogText">Made by: Inge Dalby, 101024</string>
    <string name="rDataHeaderText">Recieving Data</string>
    <string name="rDataMainText">Press the button to pull text from the web</string>
    <string name="recieveImageButton">Pull text</string>
    <string name="rDataAudioText">Press the button to pull audio from the web</string>
    <string name="recieveAudioButton">Pull audio</string>
    <string name="imgHIGHeaderText">Image from website</string>
    <string name="imgInfoText">Getting image from web (location is http://themineralpatch.net/img/avatar_sc2.jpg)</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

</resources>