<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E2E2E2"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp" >
    
    <TextView 
        style="@style/headerText"
        android:id="@+id/sDataHeader"
        android:text="@string/sDataHeaderText"
        />
    
    <View
        style="@style/divider"
        android:id="@+id/sDataDiv"
        android:layout_below="@+id/sDataHeader"
        />
    
    <TextView 
        style="@style/regularText"
        android:id="@+id/sDataText"
        android:text="@string/sDataMainText"
        android:layout_below="@id/sDataDiv"
        />
    
	<EditText 
	    style="@style/sDataEdit"
	    android:id="@+id/sDataUserMessage"
	    android:layout_below="@id/sDataText"
	    android:layout_alignParentLeft="true"
	    android:maxLength="25"
	    android:hint="@string/sDataUserHintMessage"
	    />
	
	<EditText 
	    style="@style/sDataEdit"
	    android:id="@+id/sDataTextMessage"
	    android:layout_below="@id/sDataUserMessage"
	    android:layout_alignParentLeft="true"
	    android:maxLength="50"
	    android:hint="@string/sDataTextHintMessage"
	    />
	
	<Button 
	    android:id="@+id/sDataButton"
	    android:layout_marginTop="8dp"
	    android:text="@string/sendButton"
	    android:layout_below="@id/sDataTextMessage"
	    android:layout_width="70dp"
	    android:layout_height="wrap_content"
	    />
    
    
</RelativeLayout>